--- a/index.html
+++ b/index.html
@@ -6,7 +6,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
 </head>
-<body>
+
     
+
+
+<body>
+    <header class="navbar">
+    <a href="">WEBSTUDIO</a>
+    <nav>
+    <ul>
+        <li><a href="#">Studio</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contacts</a></li>
+    </ul>
+    <ul>
+        <li><a href="email: info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel: +110001111111">+11 (000) 111-11-11</a></li>
+    </ul>
+    </nav>
+    </header>
+    <main>
+        <!-- hero -->
+        <section>
+            <h1>Effective Solutions
+for Your Business</h1>
+<button class = "btn">Order service</button>
+        </section>
+        <!-- advantages -->
+        <section>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business
+problem to walk away with the perfect and creative solution. </p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+        </section>
+        <!-- what are we doing-->
+        <section>
+            <h2>What Are We Doing</h2>
+            <ul>
+                <li><img src="./images/whatarewedoing/image1.jpg" alt="" width="360" height="300"> </li>
+                <li><img src="./images/whatarewedoing/image2.jpg" alt="" width="360" height="300"></li>
+                <li><img src="./images/whatarewedoing/image3.jpg" alt="" width="360" height="300"></li>
+            </ul>
+        </section>
+        <!-- team -->
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <img src="./images/team/image1.jpg" alt="" width="264" height="260">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li>
+                    <img src="./images/team/image2.jpg" alt="" width="264" height="260">
+                    <h3>Tom Ford</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="./images/team/image3.jpg" alt="" width="264" height="260">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                </li>
+                <li>
+                    <img src="./images/team/image4.jpg" alt="" width="264" height="260">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="#" target="_blank">WEBSTUDIO</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </footer>
 </body>
 </html>
