--- a/index.html
+++ b/index.html
@@ -5,94 +5,113 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
+    <link rel="stylesheet" href="./css/styles.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
     
 
 
 <body>
-    <header class="navbar">
-    <a href="">WEBSTUDIO</a>
-    <nav>
-    <ul>
-        <li><a href="#">Studio</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contacts</a></li>
-    </ul>
-    <ul>
-        <li><a href="email: info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel: +110001111111">+11 (000) 111-11-11</a></li>
-    </ul>
+    <header class="header">
+    <div class="header-container container">
+        <a href="./index.html" class="link header-logo">WEB<span class="partlogo-header">STUDIO</span></a>
+        <nav class="main-nav">
+        <ul class="list header-list">
+            <li class="nav-link"><a href="#">Studio</a></li>
+            <li class="nav-link"><a href="./portfolio.html">Portfolio</a></li>
+            <li class="nav-link"><a href="#">Contacts</a></li>
+        </ul>
     </nav>
+        <ul class="list header-contact">
+            <li class="contact-list-item"><a href="email: info@devstudio.com">info@devstudio.com</a></li>
+            <li class="contact-list-item"><a href="tel: +110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+        
+    </div>
     </header>
     <main>
         <!-- hero -->
-        <section>
-            <h1>Effective Solutions
-for Your Business</h1>
-<button class = "btn">Order service</button>
+        <section class="hero">
+            <div class="container">
+                <h1 class="hero-text">Effective Solutions
+                for Your Business</h1>
+                <button class = "hero-btn btn" type="button">Order service</button>
+            </div>
         </section>
         <!-- advantages -->
-        <section>
-            <ul>
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
-problem to walk away with the perfect and creative solution. </p>
-                </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-                </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-                </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-                </li>
-            </ul>
+        <section class="section advantages">
+            <div class="container">
+                <h2 class="section-title hidden">Advantages</h2>
+                <ul class="advantages-list list">
+                    <li class="advantages-list-item">
+                        <h3 class="advantages-title">Strategy</h3>
+                        <p class="advantages-text">Our goal is to identify the business
+                problem to walk away with the perfect and creative solution. </p>
+                    </li>
+                    <li class="advantages-list-item">
+                        <h3 class="advantages-title">Punctuality</h3>
+                        <p class="advantages-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                    </li>
+                    <li class="advantages-list-item">
+                        <h3 class="advantages-title">Diligence</h3>
+                        <p class="advantages-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                    </li>
+                    <li class="advantages-list-item">
+                        <h3 class="advantages-title">Technologies</h3>
+                        <p class="advantages-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <!-- what are we doing-->
-        <section>
-            <h2>What Are We Doing</h2>
-            <ul>
-                <li><img src="./images/whatarewedoing/image1.jpg" alt="" width="360" height="300"> </li>
-                <li><img src="./images/whatarewedoing/image2.jpg" alt="" width="360" height="300"></li>
-                <li><img src="./images/whatarewedoing/image3.jpg" alt="" width="360" height="300"></li>
-            </ul>
-        </section>
-        <!-- team -->
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/team/image1.jpg" alt="" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/team/image2.jpg" alt="" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/team/image3.jpg" alt="" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/team/image4.jpg" alt="" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
+        <section class="section activity">
+            <div class="container">
+                <h2 class="section-title">What Are We Doing</h2>
+                <ul class="list activity-list">
+                    <li class="activity-list-item"><img src="./images/whatarewedoing/image1.jpg" alt="" width="360" height="300"> </li>
+                    <li class="activity-list-item"><img src="./images/whatarewedoing/image2.jpg" alt="" width="360" height="300"></li>
+                    <li class="activity-list-item"><img src="./images/whatarewedoing/image3.jpg" alt="" width="360" height="300"></li>
+                </ul>
+                </div>
+                        </section>
+                        <!-- team -->
+                        <section class="section team">
+                            <div class="container"></div>
+                <h2 class="section-title">Our Team</h2>
+                <ul class="list team-list">
+                    <li class="team-list-item">
+                        <img class="img" src="./images/team/image1.jpg" alt="" width="264" height="260">
+                        <div class="team-wrapper"><h3 class="team-title">Mark Guerrero</h3>
+                        <p class="team-text">Product Designer</p></div>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="img" src="./images/team/image2.jpg" alt="" width="264" height="260">
+                        <div class="team-wrapper"><h3 class="team-title">Tom Ford</h3>
+                        <p class="team-text">Frontend Developer</p></div>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="img" src="./images/team/image3.jpg" alt="" width="264" height="260">
+                        <div class="team-wrapper"><h3 class="team-title">Camila Garcia</h3>
+                        <p class="team-text">Marketing</p></div>
+                    </li>
+                    <li class="team-list-item">
+                        <img class="img" src="./images/team/image4.jpg" alt="" width="264" height="260">
+                        <div class="team-wrapper"><h3 class="team-title">Daniel Wilson</h3>
+                        <p class="team-text">UI Designer</p></div>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
-    <footer>
-        <a href="#" target="_blank">WEBSTUDIO</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <div class="container">
+            <a href="#" target="_blank" class="footer-logo">WEB<span class="footer-logo-span">STUDIO</span></a>
+            <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
     </footer>
 </body>
 </html>
