--- a/portfolio.html
+++ b/portfolio.html
@@ -14,12 +14,12 @@
 <body>
    <header class="header">
       <div class="header-container container">
-          <a href="./index.html" class="nav-link header-logo">WEB<span class="span">STUDIO</span></a>
-          <nav class="header-nav">
+          <a href="./index.html" class="link header-logo">WEB<span class="partlogo-header">STUDIO</span></a>
+          <nav class="main-nav">
           <ul class="list header-list">
-              <li class="navbar-list-item"><a href="./index.html">Studio</a></li>
-              <li class="navbar-list-item"><a href="./portfolio.html">Portfolio</a></li>
-              <li class="navbar-list-item"><a href="#">Contacts</a></li>
+              <li class="nav-link"><a href="#">Studio</a></li>
+              <li class="nav-link"><a href="./portfolio.html">Portfolio</a></li>
+              <li class="nav-link"><a href="#">Contacts</a></li>
           </ul>
       </nav>
           <ul class="list header-contact">
