--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
           <a href="./index.html" class="link header-logo">WEB<span class="partlogo-header">STUDIO</span></a>
           <nav class="main-nav">
           <ul class="list header-list">
-              <li class="nav-link"><a href="#">Studio</a></li>
+              <li class="nav-link"><a href="./index.html">Studio</a></li>
               <li class="nav-link"><a href="./portfolio.html">Portfolio</a></li>
               <li class="nav-link"><a href="#">Contacts</a></li>
           </ul>
